# nucliadb_fastapi

./: Makefile  README.md  pyproject.toml
environment/: Dockerfile  docker-compose.yaml
main_api/: main.py
main_api/api_exceptions/: health_check.py
main_api/helpers/: dataset.py  service_checker.py
main_api/routes/: api.py  health_check.py
main_api/routes/exceptions/: __init__.py
main_api/types/: nuclia_api.py
scripts/: start.sh
test/: test_api.py
