[tool.poetry]
name = "nuclia-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Danilo Paes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sentence-transformers = "^2.2.2"
nucliadb-sdk = "^2.24.0.post623"
datasets = "^2.14.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
